# babykicks

./: .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  main.py
backend/core/: database.py  settings.py
backend/kicks/: dtos.py  models.py  routes.py  services.py  utils.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 44727d320caf_create_user_model.py  571a2cd18dcf_remigrate_models.py  692ce925a3a2_remigrate_models.py  7ab7c57456fe_create_user_model.py  914d78fc8789_create_kick_model.py
backend/scripts/: entrypoint.sh
backend/users/: auth.py  dtos.py  models.py  routes.py  services.py
src/: App.tsx  Dockerfile  Kick.tsx  Login.tsx  Navbar.tsx  apiWrapper.ts  constants.ts  index.css  store.ts
src/components/: Navbar.tsx
src/layouts/: AuthenticatedLayout.tsx  UnauthenticatedLayout.tsx
src/pages/: Error.tsx  Home.tsx  Kick.tsx  Login.tsx  Signin.tsx  Signup.tsx
